--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,4 +1,4 @@
-.navbar {
+  .navBar {
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
     height: 80px;
     display: flex;
@@ -10,7 +10,7 @@
     z-index: 999;
   }
   
-  .navbar-container {
+  .navBar-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,7 +18,7 @@
     max-width: 1500px;
   }
   
-  .navbar-logo {
+  .navBar-home {
     color: #fff;
     justify-self: start;
     margin-left: 20px;
@@ -29,7 +29,7 @@
     align-items: center;
   }
   
-  .fa-typo3 {
+  .fa-blog {
     margin-left: 0.5rem;
     font-size: 1.8rem;
   }
@@ -37,16 +37,17 @@
   .nav-menu {
     display: grid;
     grid-template-columns: repeat(4, auto);
-    grid-gap: 10px;
+    grid-gap: 20px;
     list-style: none;
-    text-align: center;
     width: 60vw;
     justify-content: end;
     margin-right: 2rem;
+    margin-bottom: 0;
+    margin-top: 0;
   }
   
   .nav-item {
-    height: 80px;
+    height: 70px;
   }
   
   .nav-links {
@@ -54,13 +55,13 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding: 0.5rem 1rem;
     height: 100%;
+    grid-gap: 5px;
   }
   
   .nav-links:hover {
-    border-bottom: 4px solid #fff;
-    transition: all 0.2s ease-out;
+    transition: all 0.3s ease-out;
+    border-bottom: 5px solid #fff;
   }
   
   .fa-bars {
@@ -76,7 +77,7 @@
   }
   
   @media screen and (max-width: 960px) {
-    .NavbarItems {
+    .nav-item {
       position: relative;
     }
   
@@ -90,6 +91,7 @@
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
+      justify-content: start;
     }
   
     .nav-menu.active {
@@ -98,13 +100,14 @@
       opacity: 1;
       transition: all 0.5s ease;
       z-index: 1;
+      justify-content: start;
+      padding: 0;
+      padding-top: 20px;
     }
   
     .nav-links {
-      text-align: center;
-      padding: 2rem;
       width: 100%;
-      display: table;
+      justify-content: center;
     }
   
     .nav-links:hover {
@@ -113,7 +116,7 @@
       border-radius: 0;
     }
   
-    .navbar-logo {
+    .navBar-home {
       position: absolute;
       top: 0;
       left: 0;
