--- a/src/components/intro-section/IntroSection.css
+++ b/src/components/intro-section/IntroSection.css
@@ -1,24 +1,23 @@
 .bg {
-    background-color: rgb(28, 27, 27);
+    background-color: #c4cace;
 }
 
 .intro-container {
     background: url('/public/img/cerebro.png') top center/contain no-repeat;
     height: 100vh;
     width: 100%; 
-    max-width: 900px; 
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+    box-shadow: inset 10 10 10 1000px rgba(0, 0, 0, 0.2);
     object-fit: scale-down;
     justify-content: center;
     text-align: center;
 }
+
 .intro-container > h1 {
     color: #eb721a;
-
     text-shadow: 2px 2px 2px #000000;
     font-size: 70px;
     margin-top: -100px;
