--- a/home-project/src/components/nav-bar/NavBar.css
+++ b/home-project/src/components/nav-bar/NavBar.css
@@ -61,6 +61,10 @@
     transition: all 0.2s ease-out;
     border-bottom: 4px solid #fff;
   }
+
+  .nav-links:active {
+  color: rgba(255, 255, 255, 0.01);
+  }
   
   .fa-bars {
     color: #fff;
