--- a/home-project/src/components/intro-section/IntroSection.css
+++ b/home-project/src/components/intro-section/IntroSection.css
@@ -1,34 +1,37 @@
-.bg {
-    background-color: #c4cace;
-}
-
 .intro-container {
-    background: url('/public/img/cerebro.png') top center/contain no-repeat;
+    background-color: #c4cace;
     height: 100vh;
-    width: 100%; 
-    margin: auto;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: inset 10 10 10 1000px rgba(0, 0, 0, 0.2);
     object-fit: scale-down;
-    justify-content: center;
+    justify-content: start;
     text-align: center;
+    padding-bottom: 20px;
+    position: sticky;
 }
 
-.intro-container > h1 {
-    color: #eb721a;
-    text-shadow: 2px 2px 2px #000000;
-    font-size: 70px;
-    margin-top: -100px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.code-background {
+    width: 100%;
+    height: 50vh;
+    min-width: 80%;
+    background: url(/img/codeBanner.jpg) repeat fixed center;
+    border-bottom: 2px white solid;
+    background-size: cover;
 }
 
-.intro-container > p {
-    color: #61DBFB;
-    font-size: 32px;
-    margin-top: 8px;
-    text-shadow: 5px 5px 5px #000000;
+.perfil {
+    background: url(/img/PerEu.jpeg) no-repeat top;
+    background-size: cover;
+    border: 2px solid #fff;
+    border-radius: 100%;
+    flex-direction: row;
+    height: 25vh;
+    position: absolute;
+    width: 25vh;
+    z-index: 4;
+    top: 37.5%;
 }
 
 .intro-btns {
@@ -40,18 +43,18 @@
 }
 
 @media screen and (max-width: 960px) {
-    .intro-container > h1 {
+    .intro-container>h1 {
         margin-top: -150px;
     }
 }
 
 @media screen and (max-width: 768px) {
-    .intro-container > h1 {
+    .intro-container>h1 {
         font-size: 50px;
         margin-top: -150px;
     }
 
-    .intro-container > p {
+    .intro-container>p {
         font-size: 30px;
     }
 
