--- a/home-project/src/components/nav-bar/NavBar.css
+++ b/home-project/src/components/nav-bar/NavBar.css
@@ -8,6 +8,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    box-shadow: 5px 2px 2px black;
   }
   
   .navBar-container {
@@ -121,7 +122,7 @@
       position: absolute;
       top: 0;
       left: 0;
-      transform: translate(25%, 50%);
+      transform: translate(25%, 70%);
     }
   
     .menu-icon {
@@ -129,7 +130,7 @@
       position: absolute;
       top: 0;
       right: 0;
-      transform: translate(-100%, 60%);
+      transform: translate(-100%, 40%);
       font-size: 1.8rem;
       cursor: pointer;
     }
@@ -137,26 +138,5 @@
     .fa-times {
       color: #fff;
       font-size: 2rem;
-    }
-  
-    .nav-links-mobile {
-      display: block;
-      text-align: center;
-      margin: 2rem auto;
-      border-radius: 4px;
-      width: 80%;
-      text-decoration: none;
-      font-size: 1.5rem;
-      background-color: transparent;
-      color: #fff;
-      padding: 14px 20px;
-      border: 1px solid #fff;
-      transition: all 0.3s ease-out;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #242424;
-      transition: 250ms;
     }
   }
