--- a/home-project/src/components/intro-section/IntroSection.css
+++ b/home-project/src/components/intro-section/IntroSection.css
@@ -14,7 +14,7 @@
 
 .code-background {
     width: 100%;
-    height: 50vh;
+    height: 40vh;
     min-width: 80%;
     background: url(/img/codeBanner.jpg) repeat fixed center;
     border-bottom: 2px white solid;
@@ -26,39 +26,16 @@
     background-size: cover;
     border: 2px solid #fff;
     border-radius: 100%;
-    flex-direction: row;
     height: 25vh;
     position: absolute;
     width: 25vh;
     z-index: 4;
-    top: 37.5%;
+    top: 27.5vh;
 }
 
-.intro-btns {
-    margin-top: 32px;
-}
-
-.intro-btns .btn {
-    margin: 6px;
-}
-
-@media screen and (max-width: 960px) {
-    .intro-container>h1 {
-        margin-top: -150px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .intro-container>h1 {
-        font-size: 50px;
-        margin-top: -150px;
-    }
-
-    .intro-container>p {
-        font-size: 30px;
-    }
-
-    .btn {
-        width: 100%;
-    }
+.welcome {
+    margin-top: 12.5vh;
+    height: 40vh;
+    width: 80vw;
+    background-color: blue;
 }
