--- a/home-project/src/components/footer/Footer.css
+++ b/home-project/src/components/footer/Footer.css
@@ -21,30 +21,35 @@
   justify-content: center;
 }
 
+.footer-link-items h2 {
+  color: #fff;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  align-items: start;
+}
+
 .footer-link-items {
+  color: #cac7c7;
+  margin-bottom: 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin: 16px;
-  text-align: left;
-  width: 160px;
+  width: 220px;
   box-sizing: border-box;
+  margin-right: 80px;
 }
 
-.footer-link-items h2 {
-  margin-bottom: 16px;
-}
-
-.footer-link-items > h2 {
+.footer-link-items a {
+  text-decoration: none;
   color: #fff;
+  margin-bottom: 0.5rem;
 }
 
-.footer-link-items :hover {
-  color: #e9e9e9;
+.footer-link-items a:hover {
+  color: #cac7c7;
   transition: 0.3s ease-out;
 }
 
-/* Social Icons */
 .social-icon-link {
   color: #fff;
   font-size: 24px;
@@ -76,18 +81,6 @@
 }
 
 @media screen and (max-width: 820px) {
-  .footer-links {
-    padding-top: 2rem;
-  }
-
-  .footer-input {
-    width: 100%;
-  }
-
-  .btn {
-    width: 100%;
-  }
-
   .footer-link-wrapper {
     flex-direction: column;
   }
@@ -95,7 +88,12 @@
   .social-media-wrap {
     flex-direction: column;
   }
-}
 
-@media screen and (max-width: 768px) {
+  .footer-container>p {
+    font-size: 24px;
+  }
+
+  .footer-link-items {
+    align-self: center;
+  }
 }
