try refresh fix
iniciei o projeto da aba projetos, e tentei arrumar as urls

--- a/src/components/projects-section/ProjectSection.css
+++ b/src/components/projects-section/ProjectSection.css
@@ -10,17 +10,23 @@
     position: sticky;
 }
 
-.code2-background {
+.projetos-background {
     width: 100%;
     height: 20vh;
-    background: url(/img/codeBanner.jpg) repeat fixed center;
+    background: url(/img/projetoBanner.jpg) repeat fixed bottom;
     border-bottom: 2px white solid;
     background-size: cover;
 }
 
-.github-page {
-  color: #171515;
-  font-size: 256px;
+.github-link {
+  text-decoration: none;
+  color: #000000;
+  margin-bottom: 0.5rem;
+}
+
+.github-link:hover {  
+  color: #5e5e5e;
+  transition: 0.3s ease-out;
 }
 
 .temp-msg {
