--- a/src/components/intro-section/IntroSection.css
+++ b/src/components/intro-section/IntroSection.css
@@ -1,5 +1,5 @@
 .intro-container {
-    background-color: #c9cdcf;
+    background-color: #9fc7db;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,5 +40,5 @@
 }
 
 .back-color {
-    background-color: #d6dddf;
+    background-color: #c4dae6;
 }
