--- a/src/components/projects-section/ProjectSection.css
+++ b/src/components/projects-section/ProjectSection.css
@@ -1,5 +1,5 @@
 .project-container {
-    background-color: #c9cdcf;
+    background-color: #9fc7db;
     display: flex;
     flex-direction: column;
     align-items: center;
